--- a/Klondike_Solitaire/Base.lproj/Main.storyboard
+++ b/Klondike_Solitaire/Base.lproj/Main.storyboard
@@ -22,22 +22,37 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zGK-TE-EvH" customClass="SolitaireView" customModule="Klondike_Solitaire" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="603"/>
                                 <color key="backgroundColor" red="0.43354780279999999" green="0.86933290159999999" blue="0.3011145482" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TdP-Vt-56v">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Wm0-dN-BTk"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem title="New Game" id="fRl-dc-yUI">
+                                        <connections>
+                                            <action selector="newGame:" destination="BYZ-38-t0r" id="z1K-Q3-kzu"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="zGK-TE-EvH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1Hr-kL-Mpi"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zGK-TE-EvH" secondAttribute="bottom" id="57u-17-LzE"/>
-                            <constraint firstAttribute="trailing" secondItem="zGK-TE-EvH" secondAttribute="trailing" id="EUx-Du-lZO"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zGK-TE-EvH" secondAttribute="bottom" id="YYZ-bY-RY2"/>
-                            <constraint firstAttribute="trailing" secondItem="zGK-TE-EvH" secondAttribute="trailing" id="dFB-W2-8gG"/>
-                            <constraint firstItem="zGK-TE-EvH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="s6L-mX-2Yf"/>
-                            <constraint firstItem="zGK-TE-EvH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sVb-8R-iAl"/>
-                            <constraint firstItem="zGK-TE-EvH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="zu0-6B-LQh"/>
+                            <constraint firstAttribute="trailing" secondItem="zGK-TE-EvH" secondAttribute="trailing" id="70f-lK-9PY"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TdP-Vt-56v" secondAttribute="bottom" id="B4F-jL-2BY"/>
+                            <constraint firstItem="TdP-Vt-56v" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="LUM-t4-3Oy"/>
+                            <constraint firstAttribute="trailing" secondItem="TdP-Vt-56v" secondAttribute="trailing" id="WhJ-jR-BP6"/>
+                            <constraint firstItem="TdP-Vt-56v" firstAttribute="top" secondItem="zGK-TE-EvH" secondAttribute="bottom" id="c5d-7B-DNf"/>
+                            <constraint firstItem="zGK-TE-EvH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="iSA-CJ-wcG"/>
+                            <constraint firstItem="zGK-TE-EvH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="x0Y-Yy-Y4j"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="solitaireView" destination="zGK-TE-EvH" id="pKd-EX-EWJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
