--- a/Klondike_Solitaire/Base.lproj/Main.storyboard
+++ b/Klondike_Solitaire/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad9_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,47 +18,48 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zGK-TE-EvH" customClass="SolitaireView" customModule="Klondike_Solitaire" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                                <subviews>
-                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TdP-Vt-56v">
-                                        <rect key="frame" x="0.0" y="960" width="768" height="44"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="l6p-m5-G0E"/>
-                                        </constraints>
-                                        <items>
-                                            <barButtonItem title="New Game" id="fRl-dc-yUI">
-                                                <connections>
-                                                    <action selector="newGame:" destination="BYZ-38-t0r" id="z1K-Q3-kzu"/>
-                                                </connections>
-                                            </barButtonItem>
-                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="3oi-Sy-7AS"/>
-                                            <barButtonItem enabled="NO" title="Undo" id="1tN-fH-F9d">
-                                                <connections>
-                                                    <action selector="undo:" destination="BYZ-38-t0r" id="Tif-kR-wcE"/>
-                                                </connections>
-                                            </barButtonItem>
-                                        </items>
-                                    </toolbar>
-                                </subviews>
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                 <color key="backgroundColor" red="0.43354780279999999" green="0.86933290159999999" blue="0.3011145482" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="TdP-Vt-56v" secondAttribute="trailing" id="AxS-J5-tKP"/>
-                                    <constraint firstItem="TdP-Vt-56v" firstAttribute="leading" secondItem="zGK-TE-EvH" secondAttribute="leading" id="MGB-D7-7ff"/>
-                                    <constraint firstAttribute="bottom" secondItem="TdP-Vt-56v" secondAttribute="bottom" id="eYy-dt-8aV"/>
-                                </constraints>
                             </view>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TdP-Vt-56v">
+                                <rect key="frame" x="0.0" y="692" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="2JX-kv-jsN"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem title="New Game" id="fRl-dc-yUI">
+                                        <connections>
+                                            <action selector="newGame:" destination="BYZ-38-t0r" id="z1K-Q3-kzu"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="3oi-Sy-7AS"/>
+                                    <barButtonItem enabled="NO" title="Undo" id="1tN-fH-F9d">
+                                        <connections>
+                                            <action selector="undo:" destination="BYZ-38-t0r" id="Tif-kR-wcE"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="zGK-TE-EvH" secondAttribute="trailing" id="70f-lK-9PY"/>
-                            <constraint firstItem="zGK-TE-EvH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="iSA-CJ-wcG"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zGK-TE-EvH" secondAttribute="bottom" id="jSO-aR-MI1"/>
-                            <constraint firstItem="zGK-TE-EvH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="x0Y-Yy-Y4j"/>
+                            <constraint firstItem="zGK-TE-EvH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3BK-dP-aBh"/>
+                            <constraint firstItem="TdP-Vt-56v" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3dw-y0-d60"/>
+                            <constraint firstAttribute="trailing" secondItem="TdP-Vt-56v" secondAttribute="trailing" id="Q9K-mY-Xxr"/>
+                            <constraint firstAttribute="trailing" secondItem="zGK-TE-EvH" secondAttribute="trailing" id="Tjk-MP-6S8"/>
+                            <constraint firstAttribute="bottom" secondItem="TdP-Vt-56v" secondAttribute="bottom" id="ZbQ-Cy-Yhx"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zGK-TE-EvH" secondAttribute="bottom" id="cBv-TH-8j9"/>
+                            <constraint firstItem="zGK-TE-EvH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="tPF-ja-1nN"/>
                         </constraints>
+                        <variation key="heightClass=compact">
+                            <mask key="subviews">
+                                <exclude reference="TdP-Vt-56v"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="newGameToolBar" destination="TdP-Vt-56v" id="OiX-Oc-EIk"/>
@@ -68,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
+            <point key="canvasLocation" x="37" y="48"/>
         </scene>
     </scenes>
 </document>
